--- a/src/main/resources/templates/start.html
+++ b/src/main/resources/templates/start.html
@@ -4,7 +4,19 @@
 <meta charset="ISO-8859-1">
 <title>PlantPlaces.com</title>
 </head>
+
+<style>
+body{
+font-size: 3em;
+align-content: center;
+background-color: #40E0D0;
+color: white;
+}
+</style>
+
 <body>
-Welcome to PlantPlaces!
+<p>Welcome to PlantPlaces!</p>
+<br><br>
+<p>This is where you are supposed to land when this is active.</p>
 </body>
 </html>
